Address Grid Layout Issues

--- a/css/home.css
+++ b/css/home.css
@@ -5,23 +5,7 @@
 footer {grid-area: footer;}
 /*
 */
-.indexContainer {
-  margin: 0 0.5em;
-  display: grid;
-  min-height: 100%;
-  grid-template-rows: auto 1fr auto;
-  grid-template-areas: 
-    "intro"
-    "gallery"
-    "footer";
-}
-.main-content {
-	margin: 0.5em;
-	display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(auto-fit, minmax(100px, 150px));
-  grid-gap: 10px;
-}
+
 /*
 */
 .intro {
@@ -29,21 +13,37 @@ footer {grid-area: footer;}
   width: 95%;
   max-width: 1000px;
 }
-/*DESKTOP Media-Query*/
-@media screen and (min-width: 650px) /*and (max-width: 899px)*/ {
-  .indexContainer {
-    min-height: 100%;
-    margin: 0 1em;
-    grid-template-rows: auto 100% auto;
-  }
+/* */
+/**/
+.galleryGrid {
+  margin: 0 0.5em;
+  display: grid;
+  grid-template-rows: auto 90% 5vh;
+  grid-template-areas: 
+    "intro"
+    "gallery"
+    "footer";
+}
+.main-content {
+  /*margin: 1.5em auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-gap: 8px;*/
+	margin: 1em;
+	display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-gap: 10px;
 }
 /*DESKTOP Media-Query*/
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 500px) {
+  .galleryGrid {
+    margin: 0 1em;
+    grid-template-rows: auto auto 24px;
+  }
 	.main-content {
-    margin: 1em 12.4em;
-    grid-template-columns: repeat(auto-fit, minmax(264px, 1fr));
-    grid-template-rows: repeat(2, minmax(250px, 400));
-    grid-gap: 16px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	}
 }
 /* ==================================================== */
